correcao na busca de contas
