# swagger/swagger_output.json
@@ -1652,7 +1652,12 @@
             "type": "string"
           },
           {
-            "name": "dt_vencimento",
+            "name": "dt_vencimento_maior",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "dt_vencimento_menor",
             "in": "query",
             "type": "string"
           },
